<resources>
    <string name="app_name">MoviesByGA</string>
    <string name="title_activity_settings">Settings</string>

    <string name="imdb_settings_order_by_popularity_label" translatable="true">Popularity</string>
    <string name="imdb_settings_order_by_vote_label" translatable="true">Vote</string>

    <string name="imdb_settings_order_by_popularity_value">https://api.themoviedb.org/3/movie/popular?</string>
    <string name="imdb_settings_order_by_vote_value">https://api.themoviedb.org/3/movie/top_rated?</string>

    <!-- Default order for order preference -->
    <string name="imdb_settings_order_by_default" translatable="false">https://api.themoviedb.org/3/movie/popular?</string>
    <string name="imdb_settings_order_by_label">IMDB Order By</string>
    <string name="imdb_settings_order_by_key">order</string>

    <string name="fav_settings_order_by_vote_label" translatable="true">Vote</string>
    <string name="fav_settings_order_by_release_label" translatable="true">Release date</string>
    <string name="fav_settings_order_by_recent_label" translatable="true">Recently added</string>

    <string name="fav_settings_order_by_vote_value">vote</string>
    <string name="fav_settings_order_by_release_value">release_date</string>
    <string name="fav_settings_order_by_recent_value">_id</string>

    <!-- Default order for order preference -->
    <string name="fav_settings_order_by_default" translatable="false">_id</string>
    <string name="fav_settings_order_by_key">_id</string>
    <string name="fav_settings_order_by_label">Favourites Order By</string>

    <!-- Used to open Settings Menu from MainActivity and DetailActivity -->
    <string name="action_settings">Settings</string>
    <!-- Title of the DetailActivity -->
    <string name="title_activity_detail">Details</string>
    <string name="content_authority">com.example.marcin.moviesbyga</string>
    <string name="action_share">Share</string>
    <string name="no_internet">No internet connection.</string>
    <string name="no_favourites">Favourites list is empty. You can add movie to favourites by
        turning star yellow. Just click it! </string>
    <string name="base_url_youtube">https://www.youtube.com/watch?v=</string>

    <string name="category_Movies">IMDB</string>
    <string name="category_Favs">Favorites Local</string>

    <string name="movieId_required">MovieId required</string>
    <string name="editor_insert_item_failed">Error with saving movie</string>
    <string name="editor_update_item_failed">You already favor this movie</string>
    <string name="editor_insert_item_success">Movie added to favourites</string>


    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_oneitem_dialog_msg">Are you sure to remove this movie from favourites?</string>
    <string name="delete_one_item">Movie removed from favourites</string>
    <string name="item_list_refreshed">Movies refreshed</string>
    <string name="name" translatable="true">Name</string>
    <string name="type" translatable="true">Type</string>
    <string name="overview" translatable="true">Overview</string>
    <string name="rating" translatable="true">Rating</string>
    <string name="title" translatable="true">Title</string>
    <string name="release_date" translatable="true">Release Date</string>


</resources>